# thor_mang_ros_control

./: CMakeLists.txt  README.md  package.xml  thor_mang_controllers_plugins.xml
cfg/: FootstepPreviewController.cfg  HardwareInterface.cfg  ServoGains.cfg
config/: thor_mang_config.ini  thor_mang_controllers.yaml  thor_mang_position_controllers.yaml  thor_mang_states.yaml  thor_mang_trajectory_controllers.yaml  thor_mang_velocity_controllers.yaml
include/thor_mang_ros_control/: thor_mang_falling_controller.h  thor_mang_footstep_interface.h  thor_mang_footstep_preview_controller.h  thor_mang_footstep_recursive_controller.h  thor_mang_hardware_interface.h  thor_mang_ros_controller.h  tic_toc.h
launch/: debug_ros_controller.launch  load_hand_pos_controllers.launch  load_position_controllers.launch  load_position_controllers_hand.launch  load_trajectory_controllers.launch  load_velocity_controllers.launch  thor_mang_hands_ros_controller.launch  thor_mang_ros_controller.launch
launch/hands/: l_vt_hand_controllers.launch  r_vt_hand_controllers.launch
src/: thor_mang_falling_controller.cpp  thor_mang_footstep_interface.cpp  thor_mang_footstep_preview_controller.cpp  thor_mang_footstep_recursive_controller.cpp  thor_mang_hardware_interface.cpp  thor_mang_ros_controller.cpp
