<?xml version="1.0"?>
<package>
  <name>thor_mang_ros_control</name>
  <version>0.0.0</version>
  <description>The thor_mang_ros_control package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="stumpf@sim.tu-darmstadt.de">Alexander Stumpf</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>GPLv3</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/thor_mang_ros_control</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
  <author email="stumpf@sim.tu-darmstadt.de">Alexander Stumpf</author>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>controller_interface</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>vigir_force_torque_compensation_lib</build_depend>
  <build_depend>thor_mang_footstep_planning_plugins</build_depend>
  <build_depend>robot_transforms</build_depend>
  <build_depend>biped_state_estimator</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>controller_interface</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>vigir_force_torque_compensation_lib</run_depend>
  <run_depend>thor_mang_footstep_planning_plugins</run_depend>
  <run_depend>robot_transforms</run_depend>
  <run_depend>biped_state_estimator</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>

  <export>
    <controller_interface plugin="${prefix}/thor_mang_controllers_plugins.xml"/>
  </export>
</package>
